--- a/stylesheet.css
+++ b/stylesheet.css
@@ -59,7 +59,7 @@ html, body {
         box-shadow: 5px 5px 5px #A8A8A8 ;
         padding: 5px;
         width:270px;
-        left: 10px;
+        right: 10px;
         bottom: 25px;
         z-index: 5;
 }
